Adding proper support for `X-Forwarded-Host` which allows for file downloads to work and our proxy to be more correct!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "python",
             "request": "launch",
             "module": "octoprint_octoeverywhere",
-            "cwd": "${workspaceFolder}"
-
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false
         },
         {
             "name": "Dev Runner",
