Fixing things up. Locking for the socket map so it's thread safe and adding better session logic to prevent old session from messing with new connections.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,17 @@
 {
+    "python.pythonPath": "py3venv/bin/python",
+    "cSpell.words": [
+        "ABNF",
+        "Ocoto",
+        "Proto",
+        "ints",
+        "ocotomessage",
+        "octoclientws",
+        "octoeverywhere",
+        "octoeverywhereimpl",
+        "octoproxysocketimpl",
+        "octosessionimpl",
+        "referer",
+        "struct"
+    ]
 }
