Welcome to OctoEverywhere 1.0!
This commit is the first in a month or two long process to upgrade off the old OctoEverywhere protocol (now called v0) to our new protocol, v1! V0 served us well, but we have learned a lot since the first day we put pen to paper for OctoEverywhere. V1 brings a ton of great enhancements right now, and opens the door for so much more to come in the future!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,19 +7,31 @@
         "Ocoto",
         "Octo",
         "Proto",
+        "brotli",
         "crypo",
         "didnt",
         "hacky",
         "ints",
+        "localip",
+        "mjpegstreamer",
         "ocotomessage",
         "octoclientws",
         "octoeverywhere",
         "octoeverywhereimpl",
+        "octoflatbuffers",
         "octoheaderimpl",
+        "octohttprequest",
         "octoprint",
         "octoproxysocketimpl",
         "octoservercon",
         "octosessionimpl",
+        "octostream",
+        "octostreammsgbuilder",
+        "octowebstream",
+        "octowebstreamhttphelper",
+        "octowebstreamhttphelperimpl",
+        "octowebstreamimpl",
+        "octowebstreamwshelper",
         "referer",
         "struct",
         "urandom"
