--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,16 @@
         "Ocoto",
         "Octo",
         "Proto",
+        "authed",
         "brotli",
         "crypo",
         "didnt",
         "hacky",
         "ints",
+        "jsonify",
         "localip",
         "mjpegstreamer",
+        "nbsp",
         "ocotomessage",
         "octoclientws",
         "octoeverywhere",
