--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Damerell",
         "DGRAM",
         "didnt",
+        "firewalled",
         "fsensor",
         "gcode",
         "hacky",
@@ -54,6 +55,7 @@
         "octowebstreamwshelper",
         "printerprofiles",
         "Proto",
+        "proxying",
         "Pursa",
         "Pylint",
         "pythoncompat",
