Adding logic to make smoother webcam streams and support more types of IP based cameras!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "checkin",
         "crypo",
         "Damerell",
+        "deps",
         "DGRAM",
         "didnt",
         "filamentchange",
