--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,6 +24,7 @@ jobs:
         pip install pillow
         pip install certifi
         pip install rsa
+        pip install sentry-sdk
         pip install octoprint
     - name: Analysing the code with pylint
       run: |
