Adding advance image resize / cropping logic to help bandwidth impaired gadget streams.
commit 637526df3f4a43789f385db99dabbc72a2bd84ca
Author: Quinn Damerell <quinnd@outlook.com>
Date:   Fri Jul 15 15:46:47 2022 -0500

    Updating some of the image capture logic.

commit 47edf67c0443939ad4f2baab6ef1ef7fbc6b3d5d
Author: Quinn Damerell <quinnd@outlook.com>
Date:   Fri Jul 15 14:39:20 2022 -0500

    Adding optional resize settings for snapshotting to be more efficient.

--- a/.pylintrc
+++ b/.pylintrc
@@ -22,6 +22,7 @@ disable=
     R0915, # Too many statements
     R1702, # Too many nested blocks
     R0801, # duplicate-code
+    R0916, # Too many booleans in one if statment.
 
 
 # A comma-separated list of package or module names from where C extensions may
