Fixing common telemetry issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,9 +73,11 @@
         "pythoncompat",
         "referer",
         "repeattimer",
+        "requestsutils",
         "routable",
         "serverauth",
         "snapshothelper",
+        "snapshotresizeparams",
         "Softwareupdate",
         "sslopt",
         "starport",
