Add a new command handler and a new API to get an overall status. Including the OctoPrint status and OE's status.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "ABNF",
         "accesscontrol",
         "Analysing",
+        "apicommandhandler",
         "appi",
         "authed",
         "backoff",
