Big updates to the plugin for Gadget - Adding more status context and adding Smart Pause logic so long term pauses don't harm prints!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "hacky",
         "handshakesyn",
         "hostnames",
+        "Hotend",
         "INET",
         "inited",
         "ints",
@@ -77,12 +78,14 @@
         "requestsutils",
         "routable",
         "serverauth",
+        "smartpause",
         "snapshothelper",
         "snapshotresizeparams",
         "Softwareupdate",
         "sslopt",
         "starport",
         "struct",
+        "subcode",
         "threaddebug",
         "timerprogress",
         "toradio",
