Trying to work around an issue with websocket-client, where ssl sockets will fail due to an issue in 1.4.x. Thus for now we will pin to <1.4.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "octowebstreamhttphelperimpl",
         "octowebstreamimpl",
         "octowebstreamwshelper",
+        "oprint",
         "printerevent",
         "printernotifications",
         "printerprofiles",
