--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "snapshothelper",
         "snapshotresizeparams",
         "Softwareupdate",
+        "Spammy",
         "sslopt",
         "starport",
         "struct",
