Adding mDNS logic to manually resolve .local hostnames. This is added for a few reasons, but mostly to make the system more robust.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,6 +23,7 @@ jobs:
         pip install octoflatbuffers
         pip install pillow
         pip install certifi
+        pip install dnspython
         pip install rsa
         pip install sentry-sdk
         pip install octoprint
