--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "deps",
         "DGRAM",
         "didnt",
+        "dnspython",
         "filamentchange",
         "firewalled",
         "firstlayerdone",
@@ -37,6 +38,7 @@
         "levelname",
         "localauth",
         "localip",
+        "mdns",
         "mjpeg",
         "mjpegstreamer",
         "Mjpg",
@@ -74,6 +76,8 @@
         "Pursa",
         "Pylint",
         "pythoncompat",
+        "rdataclass",
+        "rdclass",
         "referer",
         "repeattimer",
         "requestsutils",
