Fixing up telemetry.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "localauth",
         "localip",
         "mdns",
+        "microreads",
         "mjpeg",
         "mjpegstreamer",
         "Mjpg",
@@ -92,6 +93,7 @@
         "starport",
         "struct",
         "subcode",
+        "telemetryaccumulator",
         "threaddebug",
         "timerprogress",
         "toradio",
