Moving to 2.0 - Adding the start of Moonraker and Klipper support!!!!

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,4 +29,6 @@ jobs:
         pip install octoprint
     - name: Analysing the code with pylint
       run: |
+        pylint ./octoeverywhere/
         pylint ./octoprint_octoeverywhere/
+        pylint ./moonraker_octoeverywhere/
