Adding tons more for moonraker! The main connection logic, some notifications, and Gadget support!

--- a/.pylintrc
+++ b/.pylintrc
@@ -112,7 +112,8 @@ disable=raw-checker-failed,
         deprecated-pragma,
         use-symbolic-message-instead,
         too-many-function-args,
-        keyword-arg-before-vararg
+        keyword-arg-before-vararg,
+        use-dict-literal,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -584,4 +585,4 @@ preferred-modules=
 
 # Exceptions that will emit a warning when being caught. Defaults to
 # "BaseException, Exception".
-overgeneral-exceptions=BaseException
+overgeneral-exceptions=builtins.BaseException
