--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "keyvalidator",
         "KIAUH",
         "Klipper",
+        "Klippy",
         "levelname",
         "localauth",
         "localip",
@@ -53,6 +54,7 @@
         "mjpeg",
         "mjpegstreamer",
         "Mjpg",
+        "moonrakerclient",
         "moonrakerhost",
         "msgcount",
         "multicam",
@@ -89,6 +91,7 @@
         "printerid",
         "printernotifications",
         "printerprofiles",
+        "printerstateobject",
         "Proto",
         "proxying",
         "Pursa",
@@ -102,6 +105,7 @@
         "repeattimer",
         "requestsutils",
         "routable",
+        "sdcard",
         "serverauth",
         "smartpause",
         "snapshothelper",
