Adding the new cross-plat command system!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "brotli",
         "certifi",
         "checkin",
+        "commandhandler",
         "crowsnest",
         "crypo",
         "Damerell",
@@ -73,6 +74,7 @@
         "Octokey",
         "octopingpong",
         "octoprint",
+        "octoprintcommandhandler",
         "octoproxysocketimpl",
         "octoservercon",
         "octosessionimpl",
@@ -116,6 +118,7 @@
         "starport",
         "struct",
         "subcode",
+        "systemconfigmanager",
         "telemetryaccumulator",
         "threaddebug",
         "timerprogress",
@@ -131,6 +134,7 @@
         "VIEWMODELS",
         "virt",
         "virtualenv",
+        "warmingup",
         "webassets",
         "webfont",
         "webfonts",
