--- a/.pylintrc
+++ b/.pylintrc
@@ -114,6 +114,7 @@ disable=raw-checker-failed,
         too-many-function-args,
         keyword-arg-before-vararg,
         use-dict-literal,
+        too-many-lines
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
