Adding new crossplat webcam logic!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,8 @@
         "firstlayerdone",
         "flatbuffer",
         "flatbuffers",
+        "fliph",
+        "flipv",
         "Fluidd",
         "fontawesome",
         "fsensor",
@@ -110,7 +112,6 @@
         "sdcard",
         "serverauth",
         "smartpause",
-        "snapshothelper",
         "snapshotresizeparams",
         "Softwareupdate",
         "Spammy",
@@ -136,6 +137,8 @@
         "virtualenv",
         "warmingup",
         "webassets",
+        "webcamhelper",
+        "webcamstream",
         "webfont",
         "webfonts",
         "websocketimpl",
