Fixing up some minor issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,9 @@
         "mjpegstreamer",
         "Mjpg",
         "moonrakerclient",
+        "moonrakercommandhandler",
         "moonrakerhost",
+        "moonrakerwebcamhelper",
         "msgcount",
         "multicam",
         "nbsp",
