Fixing the first layer complete logic, to hopefully make it more robust and faster on all platforms!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,7 @@
         "octopingpong",
         "octoprint",
         "octoprintcommandhandler",
+        "octoprintwebcamhelper",
         "octoproxysocketimpl",
         "octoservercon",
         "octosessionimpl",
