Trying to fix DNS issues by forcing a min DNS lib version.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,6 +124,7 @@
         "subcode",
         "systemconfigmanager",
         "telemetryaccumulator",
+        "thirdlayerdone",
         "threaddebug",
         "timerprogress",
         "toradio",
