Adding logic to send spammy events with backoff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
         "Mjpg",
         "moonrakerclient",
         "moonrakercommandhandler",
+        "moonrakerdatabase",
         "moonrakerhost",
         "moonrakerwebcamhelper",
         "msgcount",
