Adding support for multiple instances working with tunneling!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,11 +53,13 @@
         "localauth",
         "localip",
         "Mailsail",
+        "mainsailconfighandler",
         "mdns",
         "microreads",
         "mjpeg",
         "mjpegstreamer",
         "Mjpg",
+        "moonrakerapirouter",
         "moonrakerclient",
         "moonrakercommandhandler",
         "moonrakerdatabase",
