--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -18,15 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        pip install websocket_client
-        pip install requests
-        pip install octoflatbuffers
-        pip install pillow
-        pip install certifi
-        pip install dnspython
-        pip install rsa
-        pip install sentry-sdk
         pip install octoprint
+        pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint ./octoeverywhere/
