--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "Pursa",
         "Pylint",
         "pythoncompat",
+        "ratos",
         "rdataclass",
         "rdclass",
         "realpath",
