--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "certifi",
         "checkin",
         "commandhandler",
+        "comms",
         "crowsnest",
         "crypo",
         "Damerell",
@@ -62,6 +63,7 @@
         "moonrakerapirouter",
         "moonrakerclient",
         "moonrakercommandhandler",
+        "moonrakercredentailmanager",
         "moonrakerdatabase",
         "moonrakerhost",
         "moonrakerwebcamhelper",
