Upgrading the klipper installer to be much more robust!

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,3 +25,4 @@ jobs:
         pylint ./octoeverywhere/
         pylint ./octoprint_octoeverywhere/
         pylint ./moonraker_octoeverywhere/
+        pylint ./moonraker_installer/
