--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "msgcount",
         "multicam",
         "nbsp",
+        "noatuoselect",
         "notificationshandler",
         "Ocoto",
         "ocotomessage",
@@ -110,6 +111,7 @@
         "Pursa",
         "Pylint",
         "pythoncompat",
+        "PYTHONPATH",
         "ratos",
         "rdataclass",
         "rdclass",
@@ -121,11 +123,14 @@
         "routable",
         "sdcard",
         "serverauth",
+        "skipsudoactions",
         "smartpause",
         "snapshotresizeparams",
         "Softwareupdate",
+        "somename",
         "Spammy",
         "sslopt",
+        "Starbound",
         "starport",
         "struct",
         "subcode",
