--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ pillow
 certifi>=2022.12.7
 rsa>=4.0
 dnspython>=2.3.0
+httpx==0.24.0
 # The following are required only for Moonraker
 configparser
