--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "hostcommon",
         "hostnames",
         "Hotend",
+        "httpx",
         "INET",
         "inited",
         "ints",
