Fixing a webcam compat issue with OctoPrint 1.9

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "brotli",
         "certifi",
         "checkin",
+        "classicwebcam",
         "commandhandler",
         "comms",
         "crowsnest",
