--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,6 @@ certifi>=2022.12.7
 rsa>=4.0
 dnspython>=2.3.0
 httpx==0.24.0
+urllib3>=1.26.15,<1.27.0
 # The following are required only for Moonraker
 configparser
