Adding a fix for WebRTC based moonraker setups, to keep most of the OctoEverywhere functionally working until there's a better fix.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "INET",
         "inited",
         "ints",
+        "jmpeg",
         "journalctl",
         "jsonify",
         "keyvalidator",
@@ -160,6 +161,8 @@
         "webcamstream",
         "webfont",
         "webfonts",
+        "webrequestresponsehandler",
+        "webrtc",
         "websocketimpl",
         "websockets",
         "webstream",
