Adding logic to attempt to get a better image at the end of prints. We are trying to use an image from just before the print is "done" so printers that move the print head away don't move the print out of frame.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "didnt",
         "dnspython",
         "filamentchange",
+        "finalsnap",
         "firewalled",
         "firstlayerdone",
         "flatbuffer",
@@ -55,6 +56,7 @@
         "Klippy",
         "levelname",
         "localauth",
+        "localfs",
         "localip",
         "Mailsail",
         "mainsailconfighandler",
