Fixing a few issues with the websocket class, hopefully we can get a real fix in to the actual lib and pull it in soon.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "classicwebcam",
         "commandhandler",
         "comms",
+        "creds",
         "crowsnest",
         "crypo",
         "Damerell",
