Fixing a webcam bug, adding print stats to the start notification.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "checkin",
         "classicwebcam",
         "commandhandler",
+        "Commonize",
         "comms",
         "creds",
         "crowsnest",
@@ -26,6 +27,7 @@
         "didnt",
         "dnspython",
         "filamentchange",
+        "filemetadatacache",
         "finalsnap",
         "firewalled",
         "firstlayerdone",
