Adding UI messages to moonraker and updating OctoPrint's pop-ups!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Commonize",
         "comms",
         "creds",
+        "crossorigin",
         "crowsnest",
         "crypo",
         "Damerell",
@@ -52,6 +53,7 @@
         "ints",
         "jmpeg",
         "journalctl",
+        "JRPC",
         "jsonify",
         "keyvalidator",
         "KIAUH",
