Adding logic to ignore the continuous print plugin fake .gcode notifications.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "commandhandler",
         "Commonize",
         "comms",
+        "continuousprint",
         "creds",
         "crossorigin",
         "crowsnest",
