Adding 1.9.0 webcam logic when getting webcam settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -134,6 +134,7 @@
         "routable",
         "sdcard",
         "serverauth",
+        "shotty",
         "skipsudoactions",
         "smartpause",
         "snapshotresizeparams",
