Adding the start of OctoEverywhere Companion!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "nbsp",
         "noatuoselect",
         "notificationshandler",
+        "observerconfigfile",
         "Ocoto",
         "ocotomessage",
         "Octo",
