Adding a local updating system, to make companion updating easier.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,6 +110,7 @@
         "octowebstreamimpl",
         "octowebstreamwshelper",
         "oprint",
+        "peasy",
         "permissioned",
         "PKGLIST",
         "platformcompat",
@@ -121,6 +122,7 @@
         "Proto",
         "proxying",
         "Pursa",
+        "pushd",
         "Pylint",
         "pythoncompat",
         "PYTHONPATH",
