Adding logic to setup the frontend config when the klipper install is running.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Commonize",
         "comms",
         "continuousprint",
+        "Creality's",
         "creds",
         "crossorigin",
         "crowsnest",
@@ -39,6 +40,8 @@
         "flipv",
         "Fluidd",
         "fontawesome",
+        "Frontends",
+        "frontendsetup",
         "fsensor",
         "gcode",
         "geteuid",
@@ -80,6 +83,7 @@
         "moonrakerwebcamhelper",
         "msgcount",
         "multicam",
+        "myprinter",
         "nbsp",
         "noatuoselect",
         "notificationshandler",
