--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,6 +119,7 @@
         "opkg",
         "oprint",
         "ostype",
+        "ostypeidentifier",
         "peasy",
         "permissioned",
         "PKGLIST",
