Adding official K1 and K1 Max support!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "bootstraper",
         "boundarydonotcross",
         "brotli",
+        "Buildroot",
         "certifi",
         "checkin",
         "classicwebcam",
@@ -48,6 +49,7 @@
         "gcode",
         "geteuid",
         "getpwnam",
+        "Guilouz",
         "hacky",
         "handshakesyn",
         "hostcommon",
@@ -116,6 +118,7 @@
         "octowebstreamhttphelperimpl",
         "octowebstreamimpl",
         "octowebstreamwshelper",
+        "openwrt",
         "opkg",
         "oprint",
         "ostype",
