--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # The sonic pad runs 3.7, so it's important to keep it here to make sure all of our required dependencies work
         python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
