Package version error.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ certifi>=2023.11.17
 rsa>=4.9
 dnspython>=2.3.0
 httpx>=0.24.1,<0.26.0
-urllib3>=1.26.18<2.0.0
+urllib3>=1.26.15,<2.0.0
 # The following are required only for Moonraker
 configparser
