--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -168,7 +168,9 @@
         "telemetryaccumulator",
         "thirdlayerdone",
         "threaddebug",
+        "timedatectl",
         "timerprogress",
+        "timesyncd",
         "toradio",
         "Trustpilot",
         "UDISK",
