Porting some layer notification fixes that the OctoApp developer made!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -198,6 +198,7 @@
         "websockets",
         "webstream",
         "zchange",
+        "zhop",
         "zhops",
         "zmoves",
         "zoffset",
