Refactoring the installer to make the system much better.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,4 +26,6 @@ jobs:
         pylint ./octoeverywhere/
         pylint ./octoprint_octoeverywhere/
         pylint ./moonraker_octoeverywhere/
-        pylint ./moonraker_installer/
+        pylint ./bambu_octoeverywhere/
+        pylint ./linux_host/
+        pylint ./py_installer/
