--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,5 @@ httpx>=0.24.1,<0.26.0
 urllib3>=1.26.15,<2.0.0
 # The following are required only for Moonraker
 configparser
+# Only used for Bambu Connect
+paho-mqtt>=2.0.0
