--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,12 @@
         "asvc",
         "authed",
         "backoff",
+        "Bambu",
+        "bambuclient",
+        "bambucommandhandler",
+        "bambuhost",
+        "bambuwebcamhelper",
+        "bblp",
         "bootstraper",
         "boundarydonotcross",
         "brotli",
@@ -19,6 +25,7 @@
         "commandhandler",
         "Commonize",
         "comms",
+        "companionconfigfile",
         "continuousprint",
         "Creality",
         "Creality's",
@@ -33,6 +40,7 @@
         "DGRAM",
         "didnt",
         "dnspython",
+        "esac",
         "filamentchange",
         "filemetadatacache",
         "finalsnap",
@@ -87,13 +95,13 @@
         "moonrakerdatabase",
         "moonrakerhost",
         "moonrakerwebcamhelper",
+        "mqtt",
         "msgcount",
         "multicam",
         "myprinter",
         "nbsp",
         "noatuoselect",
         "notificationshandler",
-        "observerconfigfile",
         "Ocoto",
         "ocotomessage",
         "Octo",
@@ -124,6 +132,7 @@
         "oprint",
         "ostype",
         "ostypeidentifier",
+        "paho",
         "peasy",
         "permissioned",
         "PKGLIST",
@@ -137,6 +146,7 @@
         "Proto",
         "proxying",
         "Pursa",
+        "pushall",
         "pushd",
         "Pylint",
         "pythoncompat",
@@ -148,6 +158,7 @@
         "referer",
         "releaseinfo",
         "repeattimer",
+        "reqs",
         "requestsutils",
         "routable",
         "sdcard",
@@ -181,6 +192,7 @@
         "unauthed",
         "updatemanager",
         "urandom",
+        "userdata",
         "userinteractionneeded",
         "venv",
         "VIEWMODELS",
