--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,20 @@
     "cSpell.words": [
         "ABNF",
         "accesscontrol",
+        "acked",
         "Analysing",
         "apicommandhandler",
         "appi",
         "asvc",
         "authed",
+        "autobedlevel",
         "backoff",
         "Bambu",
         "bambuclient",
         "bambucommandhandler",
         "bambuhost",
+        "bambumodels",
+        "bambustatetranslater",
         "bambuwebcamhelper",
         "bblp",
         "bootstraper",
@@ -22,6 +26,7 @@
         "certifi",
         "checkin",
         "classicwebcam",
+        "cleaningnozzle",
         "commandhandler",
         "Commonize",
         "comms",
@@ -73,11 +78,13 @@
         "journalctl",
         "JRPC",
         "jsonify",
+        "keepalive",
         "keyvalidator",
         "KIAUH",
         "Klipper",
         "Klippy",
         "levelname",
+        "levelno",
         "localauth",
         "localfs",
         "localip",
@@ -100,6 +107,7 @@
         "multicam",
         "myprinter",
         "nbsp",
+        "networksearch",
         "noatuoselect",
         "notificationshandler",
         "Ocoto",
@@ -127,6 +135,7 @@
         "octowebstreamhttphelperimpl",
         "octowebstreamimpl",
         "octowebstreamwshelper",
+        "oestreamboundary",
         "openwrt",
         "opkg",
         "oprint",
@@ -151,6 +160,7 @@
         "Pylint",
         "pythoncompat",
         "PYTHONPATH",
+        "quickcam",
         "ratos",
         "rdataclass",
         "rdclass",
