Plugin Version 3.0 - With all of the final Bambu Connect logic!!!!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,7 @@
         "journalctl",
         "JRPC",
         "jsonify",
+        "kbytes",
         "keepalive",
         "keyvalidator",
         "KIAUH",
@@ -110,6 +111,7 @@
         "networksearch",
         "noatuoselect",
         "notificationshandler",
+        "ntpsec",
         "Ocoto",
         "ocotomessage",
         "Octo",
@@ -151,6 +153,8 @@
         "printernotifications",
         "printerprofiles",
         "printerstateobject",
+        "printinfo",
+        "printkeeper",
         "PROCD",
         "Proto",
         "proxying",
