--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ rsa>=4.9
 dnspython>=2.3.0
 httpx>=0.24.1,<0.26.0
 urllib3>=1.26.15,<2.0.0
+sentry-sdk>=1.19.1,<2
 # The following are required only for Moonraker
 configparser
 # Only used for Bambu Connect
