Fixing sentry errors and updating the multicam logic!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -183,6 +183,7 @@
         "snapshotresizeparams",
         "Softwareupdate",
         "somename",
+        "sooooooo",
         "Spammy",
         "sslopt",
         "Starbound",
