--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
         "didnt",
         "dnspython",
         "esac",
+        "faststart",
         "filamentchange",
         "filemetadatacache",
         "finalsnap",
@@ -103,6 +104,7 @@
         "moonrakerdatabase",
         "moonrakerhost",
         "moonrakerwebcamhelper",
+        "movflags",
         "mqtt",
         "msgcount",
         "multicam",
@@ -175,6 +177,8 @@
         "reqs",
         "requestsutils",
         "routable",
+        "RTSP",
+        "rtsps",
         "sdcard",
         "serverauth",
         "shotty",
@@ -213,6 +217,7 @@
         "VIEWMODELS",
         "virt",
         "virtualenv",
+        "wallclock",
         "warmingup",
         "webassets",
         "webcamhelper",
