--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "INET",
         "inited",
         "ints",
+        "ipcam",
         "JFIF",
         "jmpeg",
         "journalctl",
@@ -87,6 +88,7 @@
         "Klippy",
         "levelname",
         "levelno",
+        "Liveview",
         "localauth",
         "localfs",
         "localip",
