Adding support for RTSP webcam feeds for all platforms!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -223,7 +223,9 @@
         "warmingup",
         "webassets",
         "webcamhelper",
+        "webcamsettingitem",
         "webcamstream",
+        "webcamstreaminstance",
         "webfont",
         "webfonts",
         "webrequestresponsehandler",
