--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -233,6 +233,7 @@
         "websocketimpl",
         "websockets",
         "webstream",
+        "Wzye",
         "zchange",
         "zhop",
         "zhops",
