--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "boundarydonotcross",
         "brotli",
         "Buildroot",
+        "buildx",
         "certifi",
         "checkin",
         "classicwebcam",
@@ -61,6 +62,7 @@
         "Frontends",
         "frontendsetup",
         "fsensor",
+        "fstring",
         "gcode",
         "geteuid",
         "getpwnam",
