Updating the Moonraker webcam config logic to handle older Fluidd installs and fixing up a few things.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "Commonize",
         "comms",
         "companionconfigfile",
+        "coms",
         "continuousprint",
         "Creality",
         "Creality's",
