Publish version tag + docker image tidy

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,6 +38,12 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: octoeverywhere/octoeverywhere
+          tags: |
+            # set latest tag
+            type=raw,value=latest
+            # set versioned tag
+            type=semver,pattern={{version}}
+
 
       - name: Build and push Docker image
         id: push
@@ -48,7 +54,7 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           file: ./Dockerfile
           push: true
-          tags: octoeverywhere/octoeverywhere:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
       # This isn't working, so it's disabled for now.
