--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "crypo",
         "Damerell",
         "decompressor",
+        "decompressors",
         "deps",
         "devel",
         "devs",
