Adding the start of the logic for Bambu Cloud connecting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,10 @@
         "backoff",
         "Bambu",
         "bambuclient",
+        "bambucloud",
         "bambucommandhandler",
         "bambuhost",
+        "bambulab",
         "bambumodels",
         "bambustatetranslater",
         "bambuwebcamhelper",
@@ -50,6 +52,7 @@
         "dnspython",
         "esac",
         "faststart",
+        "Fernet",
         "filamentchange",
         "filemetadatacache",
         "finalsnap",
