--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,12 +20,14 @@ jobs:
     - name: Install dependencies
       # We always install zstandard by hand, since it's an optional lib.
       # Ideally this version will stay in sync with Compression.ZStandardPipPackageString
+      # cryptography is only required for Bambu Connect.
       run: |
         python -m pip install --upgrade pip
         pip install pylint
         pip install octoprint
         pip install -r requirements.txt
         pip install "zstandard>=0.21.0,<0.23.0"
+        pip install cryptography>=42.0.8
 
     - name: Analysing the code with pylint
       run: |
