Fixing some some installer logging and such.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -177,7 +177,9 @@
         "pushall",
         "pushd",
         "Pylint",
+        "pypi",
         "pythoncompat",
+        "pythonhosted",
         "PYTHONPATH",
         "quickcam",
         "ratos",
