--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,8 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -8,8 +10,7 @@ jobs:
     strategy:
       matrix:
         # The sonic pad runs 3.7, so it's important to keep it here to make sure all of our required dependencies work
-        # As of 4-23-2024 OctoPrint doesn't support 3.12, so we can't test it because it will fail the pip install.
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
