Removing the depdency on the crypo lib, since it causes install issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -226,6 +226,7 @@
         "uipopupinvoker",
         "unauth",
         "unauthed",
+        "Unobfuscate",
         "updatemanager",
         "urandom",
         "userdata",
