Adding logic provide a device ID in the connection handshake to help dedup plugins with backup/restored config files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,14 +42,17 @@
         "crowsnest",
         "crypo",
         "Damerell",
+        "dbus",
         "decompressor",
         "decompressors",
         "deps",
         "devel",
+        "deviceid",
         "devs",
         "DGRAM",
         "didnt",
         "dnspython",
+        "dnstest",
         "esac",
         "faststart",
         "Fernet",
@@ -76,12 +79,14 @@
         "hacky",
         "handshakesyn",
         "hostcommon",
+        "hostid",
         "hostnames",
         "Hotend",
         "httpx",
         "INET",
         "inited",
         "ints",
+        "ioreg",
         "ipcam",
         "JFIF",
         "jmpeg",
@@ -90,6 +95,7 @@
         "jsonify",
         "kbytes",
         "keepalive",
+        "kenv",
         "keyvalidator",
         "KIAUH",
         "Klipper",
@@ -115,9 +121,11 @@
         "moonrakerdatabase",
         "moonrakerhost",
         "moonrakerwebcamhelper",
+        "mountinfo",
         "movflags",
         "mqtt",
         "msgcount",
+        "msys",
         "multicam",
         "myprinter",
         "nbsp",
